--- a/vignettes/plot_map.Rmd
+++ b/vignettes/plot_map.Rmd
@@ -24,16 +24,15 @@ This method retrieves a list of all countries.
 get_country_names()
 ```
 
-## req_stamen_map()
-
-This method returns stamen map of country
-```{r,echo=FALSE}
-req_stamen_map(-73.987235, -33.768378, -34.729993, 5.244486, 5,"terrain")
-```
-
 ## get_country_coordinates(name)
 
 This method returns the coordinates of a country
 ```{r,echo=FALSE}
 get_country_coordinates("brazil")
+```
+## req_stamen_map(left, bottom, right, top, zoom_val,map_type)
+
+This method returns stamen map of country
+```{r,echo=FALSE}
+req_stamen_map(-73.987235, -33.768378, -34.729993, 5.244486, 5,"terrain")
 ```
